# AI-Knowledge-Workspace

./: docker-compose.yml
backend/: Dockerfile  docker-compose.yml  main.py  pyproject.toml  requirements.txt  test.py  test_ingestion.py
backend/agents/: debate_checker.py  report_generator.py  web_researcher.py
backend/ai/chunking/: pdf_chunk.py  text_chunker.py
backend/ai/database/: conversation_table.py  message_table.py
backend/ai/embeddings/: pdf_embedding.py
backend/ai/ingestion/: docx_ingestor.py  ingestion_factory.py  pdf_ingestor.py  researchpaper_ingestor.py  text_ingestor.py  website_ingestor.py  youTube_ingestor.py
backend/ai/memory/: conversation_memory.py
backend/ai/models/: chat_messages.py  chat_response.py  chunk.py  conversation.py  document.py  embedded_chunk.py  retrievalresult.py  source_type.py  vectorstore.py
backend/ai/prompt/: prompt_builder.py
backend/ai/rag/: ingestion_pipeline.py  ingestion_service.py  rag_pipeline.py
backend/ai/repositories/: conversation_repository.py
backend/ai/retrieval/: retriever.py
backend/ai/vectorstore/: vector_store.py
backend/api/: agents.py  auth.py  chat.py  documents.py  ingest.py  rag.py  scheduler.py
backend/core/: config.py  database.py  security.py
backend/models/: document.py  user.py
backend/schemas/: auth.py  chat.py
backend/services/: cron_service.py  ingestion_service.py
client/: Dockerfile  nginx.conf  package-lock.json  package.json
client/src/: App.jsx  index.css  main.jsx
client/src/components/auth/: LoginForm.jsx  RegisterForm.jsx
client/src/components/chat/: AgentProgressBadge.jsx  ChatMessage.jsx  ChatSidebar.jsx  CitationDrawer.jsx
client/src/components/ingestion/: DocumentCard.jsx  FileUploadZone.jsx  UrlIngestionModal.jsx
client/src/components/reports/: CreateReportModal.jsx  ReportCard.jsx  ReportViewer.jsx
client/src/components/workspaces/: CreateWorkspaceModal.jsx  WorkspaceCard.jsx
client/src/context/: AuthContext.jsx  ChatContext.jsx  KnowledgeContext.jsx  ReportContext.jsx  WorkspaceContext.jsx
client/src/pages/: AuthPage.jsx  ChatPage.jsx  DashboardPage.jsx  KnowledgeBasePage.jsx  ReportsPage.jsx
client/src/services/: api.js
frontend/: package-lock.json  package.json
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/components/: ProtectedRoute.jsx
frontend/src/components/analytics/: CoverageDashboard.jsx
frontend/src/components/auth/: AuthHeader.jsx  LoadingButton.jsx  PasswordInput.jsx  PasswordStrength.jsx
frontend/src/components/chat/: AgentStatusTracker.jsx  ChatContainer.jsx  ChatInputConsole.jsx  MessageBubble.jsx
frontend/src/components/insights/: InsightsContainer.jsx  KnowledgeGraphModal.jsx
frontend/src/components/layout/: GlobalSidebar.jsx  WorkspaceSidebar.jsx
frontend/src/components/reports/: ReportGeneratorCard.jsx
frontend/src/context/: AuthContext.jsx
frontend/src/layouts/: AuthLayout.jsx
frontend/src/pages/: AnalyticsPage.jsx  Dashboard.jsx  DashboardPage.jsx  ForgotPassword.jsx  GlobalLibraryPage.jsx  Login.jsx  PricingPage.jsx  Register.jsx  ReportsArchivePage.jsx  ResetPassword.jsx  SettingsPage.jsx
frontend/src/pages/auth/: LoginPage.jsx  (+1 more)
frontend/src/services/: apiClient.js  authService.js  authService.jsx
frontend/src/utils/: authSchemas.jsx  mockData.js
server/: Dockerfile  create_index.py  fix_db.py  nukedb.py  pyproject.toml  requirements.txt  test_qdrant.py
server/app/: main.py
server/app/api/v1/: auth.py  chat.py  ingestion.py  reports.py  workspaces.py
server/app/core/: config.py  database.py  security.py
server/app/models/: chat.py  document.py  report.py  user.py  workspace.py
server/app/orchestration/: agent_team.py
server/app/schemas/: auth.py  chat.py  document.py  report.py  workspace.py
server/app/services/: cron_service.py  ingest_worker.py  memory_service.py  vector_service.py
(+4 files in other folders)
