[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "authlib>=1.7.2",
    "bcrypt>=5.0.0",
    "duckduckgo-search>=8.1.1",
    "fastapi[standard]>=0.112.0",
    "fastembed>=0.8.0",
    "httpx>=0.28.1",
    "itsdangerous>=2.2.0",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.8",
    "langchain-google-genai>=4.2.7",
    "langchain-openai>=1.3.3",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.2.8",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.14.2",
    "pyjwt>=2.8.0",
    "pypdf>=6.14.2",
    "python-dotenv>=1.0.0",
    "qdrant-client>=1.18.0",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.50.0",
]
