[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "arxiv>=4.0.0",
    "authlib>=1.7.2",
    "bcrypt>=5.0.0",
    "duckduckgo-search>=8.1.1",
    "fastembed>=0.8.0",
    "itsdangerous>=2.2.0",
    "langchain-core>=1.4.8",
    "langchain-google-genai>=4.2.7",
    "langchain-openai>=1.3.3",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.2.8",
    "beautifulsoup4>=4.15.0",
    "chromadb>=1.5.9",
    "fastapi[standard]>=0.112.0",
    "groq>=1.5.0",
    "httpx>=0.28.1",
    "langchain>=1.3.11",
    "langchain-community>=0.4.2",
    "openai>=2.44.0",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.14.2",
    "pyjwt>=2.8.0",
    "pypdf>=6.14.2",
    "pymupdf>=1.28.0",
    "pytesseract>=0.3.13",
    "python-docx>=1.2.0",
    "python-dotenv>=1.0.0",
    "qdrant-client>=1.18.0",
    "requests>=2.33.1",
    "sentence-transformers>=5.6.0",
    "sqlalchemy>=2.0.51",
    "trafilatura>=2.1.0",
    "uvicorn>=0.50.0",
    "youtube-transcript-api>=1.2.4",
]
