[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "apscheduler>=3.10.4",
    "asyncpg>=0.29.0",
    "authlib>=1.3.0",
    "beautifulsoup4>=4.12.3",
    "fastapi>=0.110.0",
    "greenlet>=3.0.3",
    "httpx>=0.27.0",
    "itsdangerous>=2.1.2",
    "langchain>=0.1.13",
    "langchain-core>=0.1.33",
    "langchain-openai>=0.1.1",
    "langchain-text-splitters>=0.0.1",
    "langgraph>=0.0.30",
    "openai>=1.14.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "pyjwt>=2.8.0",
    "pypdf>=4.1.0",
    "python-docx>=1.1.0",
    "python-multipart>=0.0.9",
    "qdrant-client>=1.8.0",
    "sentence-transformers>=2.6.0",
    "sqlalchemy>=2.0.28",
    "uvicorn[standard]>=0.28.0",
    "youtube-transcript-api>=0.6.2",
]
